# Iris_for_Godot

Iris-App/: CONTRIBUTING.md  MEMORY_FIX_DEPLOYMENT.md  README.md  build-release.bat  index.html  launch-dev.bat  package-lock.json  package.json  setup-windows.bat  start-dev.bat  test-memory-fix.js  tsconfig.json  vite.config.ts
Iris-App/.github/workflows/: windows-prealpha-release.yml
Iris-App/core_prompts/: PersonaPrompt.txt  UserInfo  UserPersonaPrompt.txt
Iris-App/docs/: RELEASE_AUTOMATION.md
Iris-App/iris_memory/: tab_1.json  tab_2.json  tab_3.json
Iris-App/model_files/: modelfile_coder.txt  modelfile_organizer.txt  modelfile_summarizer.txt  modelfile_vision.txt
Iris-App/public/: update-feed.template.json
Iris-App/src/: App.block2.checkpoint.tsx  App.bridge-block1.checkpoint.tsx  App.css  App.tsx
Iris-App/src-tauri/: Cargo.toml  tauri.conf.json
Iris-App/src-tauri/capabilities/: default.json
Iris-App/src-tauri/iris_memory/: last_closed_tab_1.json  tab_2.json
Iris-App/src-tauri/src/: commands.block2.checkpoint.rs  commands.rs  core_persona_embedded.txt  main.rs
Iris-App/src-tauri/target-check/: .rustc_info.json
Iris-App/src/components/: OllamaSetupModal.tsx  SettingsPanel.tsx
Iris-App/src/hooks/: useOllamaStream.ts
Iris-App/src/lib/: ollama.ts  summarize.ts
Iris-App/src/state/: memory.ts  tabs.ts
Iris-App/src/types/: models.ts
iris-vcode/: CHANGELOG.md  README.md  package-lock.json  package.json
iris-vcode/core_prompts/: SystemPrompt.txt
iris-vcode/model_files/: modelfile_coder-lite.txt
iris-vcode/src/: extension.ts
(+2 files in other folders)
