[package]
name = "iris-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
#tauri-plugin-opener = "2"
tauri-utils = "2"
dirs = "5"

reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tauri-plugin-opener = "2"

[profile.dev]
debug = 1          # default is 2; 1 is plenty for dev
incremental = true # default, keep it explicit
opt-level = 0
codegen-units = 256
